--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "github-action-demo",
   "version": "0.1.0",
+  "homepage": "https://finch001.github.io/github-action-demo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
